# contractlane

./: .env  AGENTS.md  CHANGELOG.md  HOWTO_CONFORMANCE  LICENSE  Makefile  OPENCLAW.md  README.md  RELEASE.md  VERSIONING.md  docker-compose.dev.yml  docker-compose.onboarding.yml  docker-compose.prod.yml  go.mod  quickstart.md
conformance/: README.md
docs/: 1_PROJECTOVERVIEW_README.md  ABOUT.md  AGENT_ID_V1.md  AGENT_ID_V2.md  AGENT_INTEGRATION.md  AGENT_QUICKSTART.md  AMOUNT_V1.md  API_SPEC.md  CONFORMANCE.md  DB_SCHEMA.md  DELEGATION.md  DELEGATION_REVOCATION_V1.md  DELEGATION_V1.md  DESIGN.md  EVIDENCE_V1.md  EVP.md  GATING.md  GUARANTEES.md  HOSTED_AGENT_JOURNEY.md  INTEGRATION_OVERVIEW.md  INTEGRATOR_START_HERE.md  ONBOARDING_SERVICE.md  PROJECT_CONTEXT.MD  PROOF_BUNDLE_V1.md  PROTOCOL.md  PUBLISH_CHECKLIST.md  RELEASE.md  RULES_V1.md  SIGNATURE_ENVELOPE_V1.md  SIG_V1.md  SIG_V2.md  SIG_V3.md  STATE_MACHINE.md  TEMPLATE_AUTHORING.md  TEMPLATE_LINT_ERRORS.md  TEMPLATE_MODEL.md  THREAT_MODEL.md  VERSIONING.md  hosted_mode.md
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_idempotency_records.up.sql  000003_auth_failures.down.sql  000003_auth_failures.up.sql  000004_contract_hash_artifacts.down.sql  000004_contract_hash_artifacts.up.sql  000005_principal_policy_defaults.down.sql  (+35 more)
sdk/python/: README.md  pyproject.toml
sdk/python/contractlane/: __init__.py  client.py
sdk/python/contractlane.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/examples/: happy_path.py
sdk/python/tests/: test_client.py  test_integration.py
(+183 files in other folders)
