[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contractlane"
version = "0.1.0"
description = "Contract Lane Python SDK"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0", "pynacl>=1.5.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
packages = ["contractlane"]
